# APP_KeyDeck01

./: .gitignore  CLAUDE.md  Cargo.toml  DEVBOARD.md  INDEX.md  README.md  start_hub.cmd
.claude/agents/: keydeck-explorer.md  keydeck-guardian.md
brief/: inspector_schema_draft_v0.1.json  keydeck_backlog_agents_docs_v1.json  keydeck_brain_v1.json  keydeck_design_v0.2.md  keydeck_design_v0.3.md  keydeck_design_v0.4.md  keydeck_format_editing_design_v0.5.md  keydeck_type_ideas_v1.json  keydeck_vision_and_agents_v1.md  ref_ipad_keyboard_parts_v1.md  spec_return_log.md
brief/mockup/: screen_mock_v0.3.html  screen_mock_v0.4.html
crates/hub-core/: Cargo.toml
crates/hub-core/src/: lib.rs
crates/proto-adapter-win/: Cargo.toml
crates/proto-adapter-win/examples/: smoke_notepad.rs
crates/proto-adapter-win/src/: lib.rs
crates/proto-hub/: Cargo.toml
crates/proto-hub/src/: deck.rs  error.rs  main.rs  protocol.rs  qr.rs  startup.rs  state.rs  ws.rs
crates/proto-keymap/: Cargo.toml
crates/proto-keymap/src/: lib.rs
decks/: deck_default.json
keymaps/: keymap_default.json  keymap_ipad01_vol12.json  keymap_writing01.json
keymaps/layers/: README.md  default_layer1.json  default_layer2.json  ipad01_vol12_layer0.json  ipad01_vol12_layer1.json  ipad01_vol12_layer2.json  writing01_layer0.json
reports/: report_keydeck_v0.2_verification.md
schemas/: deck.schema.json  keymap.schema.json  layer.schema.json
static/: deck.html  ipad.html  kb.html  settings.html
