[package]
name = "proto-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
proto-keymap = { path = "../proto-keymap" }
proto-adapter-win = { path = "../proto-adapter-win" }
hub-core = { path = "../hub-core" }   # vendored凍結。CommandServiceの冪等・拒否を流用（D5）
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.53.0", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
subtle = "2.6.1"
rand = "0.10.2"
local-ip-address = "0.6.13"
futures-util = "=0.3.31"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
# TODO(T3): 有効化して実装
# axum = { version = "0.8", features = ["ws"] }
# tokio = { version = "1", features = ["full"] }
# tower-http = { version = "0.6", features = ["fs"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# tracing = "0.1"
# tracing-subscriber = "0.3"
# subtle = "2"          # token定数時間比較（D8）
# rand = "0.9"          # token生成
# local-ip-address = "0.6"  # 接続URL表示用LAN IP取得
